# tesis-jaks

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  Tesis.ini  config.jaks  config_affiliations.jaks  config_articles.jaks  config_authors.jaks  config_cities.jaks  restos.jaks
files/: compute_result.py  generate_docs.py  node_compatibility.csv  node_cover.csv  node_name.csv
files/configurationFiles/affiliations/: BoboProp01.jaks  BoboProp02.jaks  BoboProp03.jaks  BoboProp04.jaks  BoboProp05.jaks  BoboProp06.jaks  BoboProp07.jaks  BoboProp08.jaks  BoboProp09.jaks  BoboSimple01.jaks  BoboSimple02.jaks  BoboSimple03.jaks  BoboSimple04.jaks  BoboSimple05.jaks  BoboSimple06.jaks  BoboSimple07.jaks  BoboSimple08.jaks  BoboSimple09.jaks  EffHacProp01.jaks  EffHacProp02.jaks  (+35 more)
files/euro_cities/: node_city.txt  node_compatibility.csv  node_cost.txt  node_cover_attribute.txt  node_id.txt  output_data.csv  type_name.csv  type_name.txt
files/papers/: calculate_similar_elements.py  node_cost.csv  node_cover.csv  node_name.csv  para_pasar_datos_db_csv.sql
files/products/: node_cost.csv  type_name.csv
files/restaurants/: README.txt  city_restaurant.txt  generateCSVForTesis.py  insertFiles.py  node_compatibility.csv  node_cost.csv  node_cover.csv  node_name.csv  restaurant_compat_intersection.txt  restaurant_cost.txt  restaurant_cuisine.txt  run.py  type_name.csv
gephi/: tesis.gephi
gui/: configurationJaks.py  configurator.py  configurator.ui  configuratorController.py  main.py  mappingFields.py  result.py  result.ui  resultController.py  resultMain.py  run-configurator.sh  run-executer.sh
gui/comparador/: comparator.py  comparatorController.py  run.sh  solution.py
informe/: abs_en.tex  abs_esp.tex  agradecimientos.tex  bibliografia.tex  busquedas.tex  caratula.tex  compileTex.sh  conclusiones.tex  conjunto.tex  dedicatoria.tex  desarrollo.tex  ej-papers-sim.tex  experimentacion.tex  implementacion.tex  informe-italianos.tex  introduccion.tex  nuevas-propuestas.tex  resultados.tex  solucion.sty  tablas-resutlados.tex  tesis.bib  tesis.tex  trabajos-futuros.tex  trabajos-previos.tex
paper/: abstract.tex  acknowledgments.tex  appendix.tex  authors.tex  body.tex  ccs_concepts.tex  conclusions.tex  introduction.tex  keywords.tex  main.tex  sig-alternate-05-2015.cls
paper_ingles/: abstract.tex  authors.tex  body.tex  conclusions.tex  introduction.tex  keywords.tex  main.tex  sig-alternate-05-2015.cls  sigproc.bib
presentacion/: presentacion.nav  presentacion.tex
src/: executeSolver.cpp  executeSolver.h  main.cpp  matrixConcrete.cpp  matrixConcrete.h  matrixWrapper.h  problemInstance.cpp  problemInstance.h  problemInstanceFromDataBase.cpp  problemInstanceFromDataBase.h  problemInstanceFromFiles.cpp  problemInstanceFromFiles.h  snowFlake.cpp  snowFlake.h
src/cluster/: clustering.cpp  clustering.h  metisWrapper.cpp  metisWrapper.h
src/dao/: dao.cpp  dao.h  daoMySql.cpp  daoMySql.h  daoQt.cpp  daoQt.h  factoryDao.cpp  factoryDao.h
src/matrix/: matrixConcrete.cpp  matrixConcrete.h  matrixWrapper.h
src/problem/: Tesis.ini  element.cpp  element.h  elementAffiliation.cpp  elementAffiliation.h  elementArticle.cpp  elementArticle.h  elementAuthor.cpp  elementAuthor.h  elementFile.cpp  elementFile.h  factoryElement.cpp  factoryElement.h  factoryFlake.cpp  factoryFlake.h  factoryProblem.cpp  factoryProblem.h  factoryProblemOLD.cpp  factoryProblemOLD.h  flake.cpp  flake.h  problemInstance.cpp  problemInstance.h  problemInstanceFromDataBase.cpp  problemInstanceFromDataBase.h  problemInstanceFromFiles.cpp  problemInstanceFromFiles.h  snowFlake.cpp  snowFlake.h  snowFlakeHelper.cpp  snowFlakeHelper.h
src/queue/: priorityQueue.cpp  priorityQueue.h
src/solver/: .restrictedHACSolver.h.kate-swp  clusterAndPickSolver.cpp  clusterAndPickSolver.h  exhaustiveGreedyAnySimSOBOSolver.cpp  exhaustiveGreedyAnySimSOBOSolver.h  exhaustiveGreedySumSimSOBOSolver.cpp  exhaustiveGreedySumSimSOBOSolver.h  exhaustiveSOBOSolver.cpp  exhaustiveSOBOSolver.h  factorySolver.cpp  factorySolver.h  factorySolverOLD.cpp  factorySolverOLD.h  greedySolver.cpp  greedySolver.h  localSearchSolver.cpp  localSearchSolver.h  multiplicativeEffortProduceAndChooseSolver.cpp  multiplicativeEffortProduceAndChooseSolver.h  produceAndChooseSolver.cpp  produceAndChooseSolver.h  randomBOBOSolver.cpp  randomBOBOSolver.h  randomSOBOSolver.cpp  randomSOBOSolver.h  restrictedEfficientHACSolver.cpp  restrictedEfficientHACSolver.h  restrictedHACSolver.cpp  restrictedHACSolver.h  restrictedHACWithSpecificItemSolver.cpp  restrictedHACWithSpecificItemSolver.h  sequentialScanSolver.cpp  sequentialScanSolver.h  snowflakesOneByOneSolver.cpp  snowflakesOneByOneSolver.h  snowflakesOneByOneWithSpecificItemSolver.cpp  snowflakesOneByOneWithSpecificItemSolver.h  solver.cpp  solver.h
src/test/: testSuites.cpp  testSuites.h  testingClusterAndPickSolver.cpp  testingClusterAndPickSolver.h  testingClustering.cpp  testingClustering.h  testingMatrix.cpp  testingMatrix.h  testingMetisWrapper.cpp  testingMetisWrapper.h  testingProblemInstance.cpp  testingProblemInstance.h  testingProblemInstanceFromFiles.cpp  testingProblemInstanceFromFiles.h
src/util/: Logger.cpp  configurationJaks.cpp  configurationJaks.h  dbConnection.h  exception.cpp  exception.h  factoryConfigurator.cpp  factoryConfigurator.h  id2Str.cpp  id2Str.h  identificationGeneretor.cpp  identificationGeneretor.h  identificationGeneretorAffiliation.cpp  identificationGeneretorAffiliation.h  identificationGeneretorArticle.cpp  identificationGeneretorArticle.h  identificationGeneretorAuthor.cpp  identificationGeneretorAuthor.h  json.hpp  pairsToJaccardSimilarity.cpp  pairsToJaccardSimilarity.h  redefinitions.h  stringUtilities.cpp  stringUtilities.h  systemUtilities.cpp  systemUtilities.h  vectorToAngleSimilarity.cpp  vectorToAngleSimilarity.h  vectornorm.cpp  vectornorm.h  writerSolution.cpp  writerSolution.h  writerSolutionAffiliations.cpp  writerSolutionAffiliations.h  writerSolutionArticles.cpp  writerSolutionArticles.h  writerSolutionAuthors.cpp  writerSolutionAuthors.h
(+504 files in other folders)
